components/instances/vault-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: vault
spec:
  type: ClusterIP
  selector:
    app: vault
  ports:
    - name: http
      port: 8200
      targetPort: 8200
    - name: cluster
      port: 8201
      targetPort: 8201
---
apiVersion: v1
kind: Service
metadata:
  name: vault-ui
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: vault
spec:
  type: ClusterIP
  selector:
    app: vault
  ports:
    - name: http
      port: 8200
      targetPort: 8200
