components/instances/vault-server/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault-ui
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: vault
spec:
  to:
    kind: Service
    name: vault-ui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
